<resources>
    <string name="app_name">Final-Project</string>
    <string name="manage_users_test">Manage Users Test</string>
    <string name="manage_genres_test">Manage Genres Test</string>
    <string name="manage_users">MANAGE USERS</string>
    <string name="manage_genres">MANAGE GENRES</string>
    <string name="admin_things">ADMIN THINGS</string>
    <string name="admin_things_test">Admin Things Test</string>
    <string name="welcome_to_movie_watchlist">Welcome to Movie Watchlist</string>
    <string name="please_sign_in">Please sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN!</string>
    <string name="sign_up">SIGN UP!</string>
    <string name="welcome">Welcome!</string>
    <string name="movies_to_watch">Movies to Watch</string>
    <string name="watched_movies">Watched Movies</string>
    <string name="add_movies">Add Movies</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_genre">Enter genre</string>
    <string name="add_movie">ADD MOVIE</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="confirm_password">Confirm Password</string>
</resources>