<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/watchMoviesTextView"
        android:text="@string/movies_to_watch"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- TODO: Change height of recycler views -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/watchListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchMoviesTextView"
        />

    <TextView
        android:id="@+id/completedMoviesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watched_movies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchListRecyclerView"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/completedWatchListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="225dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completedMoviesTextView"
        />

    <TextView
        android:id="@+id/addMoviesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_movies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completedWatchListRecyclerView"
        />

    <EditText
        android:id="@+id/movieTitleInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMoviesTextView" />

    <EditText
        android:id="@+id/movieGenreInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/enter_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleInputEditText" />

    <Button
        android:id="@+id/addMovieButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_movie"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieGenreInputEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>