<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#E5E5E5"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/titleLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/welcome_to_movie_watchlist"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToolbar" />

    <TextView
        android:id="@+id/titleSignInTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/please_sign_in"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/titleLoginTextView" />

    <EditText
        android:id="@+id/usernameLoginEditText"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="24dip"
        android:autofillHints="Please enter your username."
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSignInTextView"
        android:background="#D9D9D9"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="24dip"
        android:autofillHints="Please enter your password."
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLoginEditText"
        android:background="#D9D9D9"
        android:textColorHint="@color/black" />

    <Button
        android:layout_width="320dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:textSize="32sp"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/loginpage_loginbutton_background" />

    <TextView
        android:id="@+id/noAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/signUpButton"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/loginpage_signupbutton_background" />

</androidx.constraintlayout.widget.ConstraintLayout>